--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -14,10 +14,10 @@
     "title": "Освойте фронтенд разработку",
     "titleAccent": "От нуля до героя",
     "description": "Присоединяйтесь к нашей комплексной 8-месячной программе фронтенд разработки. Изучайте HTML, CSS, JavaScript и React от экспертов индустрии. Создавайте реальные проекты и начните свою карьеру в сфере технологий.",
-    "stats": {
-      "students": "Студентов зачислено",
-      "months": "Месяцев программа",
-      "placement": "Процент трудоустройства"
+    "courseDetails": {
+      "techStack": "Технологии",
+      "content": "Содержание курса",
+      "projects": "Фокус на портфолио"
     },
     "buttons": {
       "startJourney": "Начать путешествие",
@@ -113,15 +113,15 @@
       "plans": {
         "full": {
           "name": "Полная оплата",
-          "price": "$2,997",
-          "originalPrice": "$3,497",
-          "savings": "Экономия $500",
+          "price": "5,000,000 сум",
+          "originalPrice": "5,600,000 сум",
+          "savings": "Экономия 600,000 сум",
           "description": "Единовременная оплата за всю программу",
           "popular": "Самый популярный"
         },
         "monthly": {
           "name": "Ежемесячная оплата",
-          "price": "$399",
+          "price": "700,000 сум",
           "description": "Разделено на 8 ежемесячных платежей"
         }
       },
